--- a/conf/streamviewer.glade
+++ b/conf/streamviewer.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Dec  1 22:18:18 2009 -->
+<!--Generated with glade3 3.4.5 on Wed Dec  2 22:58:56 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="winMain">
     <property name="title" translatable="yes">StreamViewer</property>
@@ -196,6 +196,7 @@
             <property name="can_focus">True</property>
             <child>
               <widget class="GtkTreeView" id="tvwSelection">
+                <property name="width_request">150</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="headers_clickable">True</property>
